feat(harness): guided run-profiles, resource sampling, protocol-override
Run-harness updates across the guided / comparative / campaign runners:
- run-guided.sh + runtime/profiles/guided-run-profile.schema.json: guided run profiles
  (protocol+TLS override axis, env-file selection) with validator fixtures
- tools/bench/lib/resource-sampler.sh + protocol.sh: resource sampling + protocol wiring
- run-comparative / run-full-triad-ab-ba / run-iso-budget-sweep-ab-ba / run-entity-read-by-id /
  run-entity-read-by-id-campaign: flag updates + canonical-id alignment
- schemas/benchmark-result.schema.json: result-shape additions
- runtime/drivers/env/exeris-community-runtime.env: protocol/TLS override launch contract

Verified: tools/bench/tests/test-guided-profile-validation.sh fixtures all pass; both schemas
are valid JSON.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>